refactor(tag-service): extract duplicated checks and helpers
- Add helpers: hasPosts, safeTagNames, existingTagNameSet, findMissingTagNames, createAndAttachMissingTags
- Use helpers in getAllActiveTagsWithPosts, findOrCreateTags, cleanupOrphanedTags, updatePostTags
- No behavior changes; tests remain green